--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "jquery": "^3.6.4",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6",
+    "slick": "^1.12.2",
     "tui-pagination": "^3.4.1"
   },
   "devDependencies": {
